tests/typechecker/fail/029-array-slice.hyg
let arr: array {int} = array(2 + 2, 40 + 2);
// should not change type!
(arraySlice(arr, 0, 3)): array {float}